# solitaire

./: .gitignore  README.md
solitaire_engine/: solitaire_engine.sln
solitaire_engine/scripts/: testinputter.py
solitaire_engine/solitaire_engine/: card.cpp  card.h  card_pile.cpp  card_pile.h  command.cpp  command.h  command_result.cpp  command_result.h  constants.h  deck.cpp  deck.h  (+20 more)
solitaire_engine_linux/: .gitignore  CMakeLists.txt  Makefile  README.md  solitaireengine.cpp
solitaire_engine_linux/include/: card.h  card_pile.h  command_result.h  constants.h  engine.h  foundation_pile.h  logger.h  stdafx.h  stock.h  tableau_pile.h  talon.h  targetver.h  utility.h
solitaire_engine_linux/include/communication/: command.h  command_result.h  response.h
solitaire_engine_linux/include/gameplay/: card.h  card_pile.h  engine.h  foundation_pile.h  stock.h  tableau_pile.h  talon.h
solitaire_engine_linux/include/utilities/: logger.h  utility.h
solitaire_engine_linux/src/: card.cpp  card_pile.cpp  engine.cpp  foundation_pile.cpp  logger.cpp  solitaireengine.cpp  stock.cpp  tableau_pile.cpp  talon.cpp  utility.cpp
solitaire_engine_linux/src/communication/: command.cpp  command_result.cpp  response.cpp
solitaire_engine_linux/src/gameplay/: card.cpp  card_pile.cpp  engine.cpp  foundation_pile.cpp  stock.cpp  tableau_pile.cpp  talon.cpp
solitaire_engine_linux/src/utilities/: logger.cpp  utility.cpp
solitaire_kivy/: app.py  solitaire.kv
solitaire_web/: package-lock.json  package.json  readme.md  requirements.txt  server.py
webserver/: requirements.txt  server.py
(+14 files in other folders)
